--- a/english/en_repository.html
+++ b/english/en_repository.html
@@ -35,6 +35,10 @@
                     <a href="https://github.com/rafamoliv/NLW-2020_Ecoleta" target="_blank" id="repgit">NLW-2020_Ecoleta</a>
                 </div>
                 <div class="card">
+                    <img src="./images/repository/parallax.png" alt="">
+                    <a href="https://github.com/rafamoliv/parallax_css" target="_blank" id="repgit">parallax_css</a>
+                </div>
+                <div class="card">
                     <img src="../images/repository/chalehotel.png" alt="chale-hotel_responsive">
                     <a href="https://github.com/rafamoliv/chale-hotel_responsive" target="_blank" id="repgit">chale-hotel_responsive</a>
                 </div>
