--- a/english/en_repository.html
+++ b/english/en_repository.html
@@ -35,11 +35,11 @@
                     <a href="https://github.com/rafamoliv/NLW-2020_Ecoleta" target="_blank" id="repgit">NLW-2020_Ecoleta</a>
                 </div>
                 <div class="card">
-                    <img src="./images/repository/museunacional.png" alt="">
+                    <img src="../images/repository/museunacional.png" alt="">
                     <a href="https://github.com/rafamoliv/MuseuNacional_website" target="_blank" id="repgit">MuseuNacional_website</a>
                 </div>
                 <div class="card">
-                    <img src="./images/repository/parallax.png" alt="">
+                    <img src="../images/repository/parallax.png" alt="">
                     <a href="https://github.com/rafamoliv/parallax_css" target="_blank" id="repgit">parallax_css</a>
                 </div>
                 <div class="card">
