--- a/english/en_repository.html
+++ b/english/en_repository.html
@@ -31,8 +31,16 @@
                     <a href="https://github.com/rafamoliv/mypage" target="_blank" id="repgit">mypage</a>
                 </div>
                 <div class="card">
+                    <img src="../images/repository/spotify.png" alt="spotify-clone-web">
+                    <a href="https://github.com/rafamoliv/spotify-clone-web" target="_blank" id="repgit">spotify-clone-web</a>
+                </div>
+                <div class="card">
                     <img src="../images/repository/ecoleta.png" alt="NLW-2020_Ecoleta">
                     <a href="https://github.com/rafamoliv/NLW-2020_Ecoleta" target="_blank" id="repgit">NLW-2020_Ecoleta</a>
+                </div>
+                <div class="card">
+                    <img src="../images/repository/finans.png" alt="finans_bootstrap">
+                    <a href="https://github.com/rafamoliv/finans_bootstrap" target="_blank" id="repgit">finans_bootstrap</a>
                 </div>
                 <div class="card">
                     <img src="../images/repository/museunacional.png" alt="">
