--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
         <div class="col right">
           <h2>
-            Hello!!! I'm<br>
+            Hello! I'm<br>
             Rafael Magalhães de Oliveira.
           </h2>
           <p>
